--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -1,10 +1,8 @@
 name: .NET GithubActions
-
-on:
-  push:
-
+run-name: Estoy aprendiendo GitHub Actions!
+on: [push]
 jobs:
-  build:
+  hola-mundo:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,4 +15,6 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Run Application
+        env:
+          GITHUB_USER: ${{ github.actor }}
         run: dotnet run
